--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     implementation "androidx.navigation:navigation-compose:2.5.3"
+
+    //EXTENDED ICONS
+    implementation "androidx.compose.material:material-icons-extended:1.3.1"
 }
