--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
 
     //EXTENDED ICONS
     implementation "androidx.compose.material:material-icons-extended:1.3.1"
+    //pager
+    implementation "com.google.accompanist:accompanist-pager:0.29.0-alpha"
 }
