--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,5 @@ dependencies {
     //EXTENDED ICONS
     implementation "androidx.compose.material:material-icons-extended:1.3.1"
     //pager
-    implementation "com.google.accompanist:accompanist-pager:0.29.0-alpha"
+    implementation "com.google.accompanist:accompanist-pager:0.28.0"
 }
